# auth-banner

./: LICENSE  README.md  auth-banner.cabal  stack.yaml
app/: Main.hs
src/: Config.hs  Inspect.hs  Rules.hs  Sqlite.hs  Tailf.hs  Types.hs
systemd/: auth-banner.default  auth-banner.service
