name:                auth-banner
version:             0.0.1.0
synopsis:            Ban failed authentication attempts
description:         Follow system authentication log and add IP block rule for offending hosts.
homepage:            https://github.com/humppa/auth-banner#readme
license:             ISC
license-file:        LICENSE
author:              Tuomas Starck
maintainer:          dev@starck.fi
copyright:           (c) 2017 Tuomas Starck
category:            Security
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tailf
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , unix
  default-language:    Haskell2010

executable auth-banner
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts
  build-depends:       base
                     , auth-banner
                     , bytestring
                     , iproute
                     , process
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/humppa/auth-banner
