name:                auth-banner
version:             0.9.1
synopsis:            Ban failed authentication attempts
description:         Auth-Banner follows system authentication log and blocks
                     any IP addresses which are deemed abusive.
homepage:            https://github.com/humppa/auth-banner#readme
license:             ISC
license-file:        LICENSE
author:              Tuomas Starck
maintainer:          dev@starck.fi
copyright:           (c) 2017 Tuomas Starck
category:            Security
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config
                     , Rules
                     , Sqlite
                     , Tailf
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , linux-inotify
                     , sqlite-simple
                     , unix
  default-language:    Haskell2010

executable auth-banner
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts
  build-depends:       base
                     , auth-banner
                     , bytestring
                     , optparse-applicative
                     , process
                     , unix
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/humppa/auth-banner
